--- a/streampipes-extensions/streampipes-connect-adapters-iiot/pom.xml
+++ b/streampipes-extensions/streampipes-connect-adapters-iiot/pom.xml
@@ -30,6 +30,10 @@
     </parent>
     <artifactId>streampipes-connect-adapters-iiot</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <!-- StreamPipes dependencies -->
         <dependency>
