--- a/streampipes-extensions/streampipes-pipeline-elements-data-simulator/pom.xml
+++ b/streampipes-extensions/streampipes-pipeline-elements-data-simulator/pom.xml
@@ -27,6 +27,10 @@
 
     <artifactId>streampipes-pipeline-elements-data-simulator</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>net.acesinc.data</groupId>
