--- a/streampipes-extensions/streampipes-sinks-databases-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-sinks-databases-jvm/pom.xml
@@ -22,11 +22,14 @@
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
         <version>0.69.0-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streampipes-sinks-databases-jvm</artifactId>
+
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <dependencies>
         <!-- StreamPipes dependencies -->
