[hotfix] Update various dependencies

--- a/streampipes-connect/pom.xml
+++ b/streampipes-connect/pom.xml
@@ -136,6 +136,21 @@
             </exclusions>
         </dependency>
 
+        <!-- dependency convergence -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
