--- a/streampipes-extensions/streampipes-processors-text-mining-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-text-mining-flink/pom.xml
@@ -68,6 +68,18 @@
                     <groupId>org.apache.flink</groupId>
                     <artifactId>flink-runtime_2.11</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.flink</groupId>
+                    <artifactId>flink-streaming-java_2.11</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-reflect</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-compiler</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
