--- a/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
@@ -53,6 +53,12 @@
             <version>0.69.0-SNAPSHOT</version>
             <classifier>embed</classifier>
         </dependency>
+
+        <!-- Dependency convergence -->
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
