--- a/streampipes-extensions/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>streampipes-processors-filters-siddhi</artifactId>
             <version>0.69.0-SNAPSHOT</version>
             <classifier>embed</classifier>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
@@ -105,6 +111,10 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
         </dependency>
         <dependency>
             <groupId>org.atteo.classindex</groupId>
