--- a/streampipes-extensions/streampipes-processors-transformation-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-transformation-flink/pom.xml
@@ -69,6 +69,10 @@
                     <groupId>org.apache.flink</groupId>
                     <artifactId>flink-runtime_2.11</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.flink</groupId>
+                    <artifactId>flink-streaming-java_2.11</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
