--- a/streampipes-wrapper-siddhi/pom.xml
+++ b/streampipes-wrapper-siddhi/pom.xml
@@ -27,6 +27,16 @@
 
     <artifactId>streampipes-wrapper-siddhi</artifactId>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <!-- StreamPipes dependencies -->
         <dependency>
@@ -56,6 +66,13 @@
             <groupId>io.siddhi.extension.execution.list</groupId>
             <artifactId>siddhi-execution-list</artifactId>
             <version>1.0.1</version>
+        </dependency>
+
+        <!-- Dependency convergence -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
   
