[hotfix] Exclude spring-webmvc from rendersnake dependency

--- a/streampipes-container/pom.xml
+++ b/streampipes-container/pom.xml
@@ -89,6 +89,10 @@
 					<groupId>javax.servlet</groupId>
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-webmvc</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
