--- a/ui/package.json
+++ b/ui/package.json
@@ -49,6 +49,7 @@
     "angular-tree-component": "8.5.6",
     "angular-ui-tree": "2.9.0",
     "angular2-uuid": "1.1.1",
+    "assert": "^2.0.0",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
     "codemirror": "5.55.0",
