--- a/ui/package.json
+++ b/ui/package.json
@@ -20,30 +20,30 @@
     "test-cypress-all": "npx cypress run --spec 'cypress/tests/**/*.spec.ts'"
   },
   "dependencies": {
-    "@angular/animations": "12.2.9",
+    "@angular/animations": "^12.2.9",
     "@angular/cdk": "^12.2.9",
-    "@angular/common": "12.2.9",
-    "@angular/compiler": "12.2.9",
-    "@angular/core": "12.2.9",
+    "@angular/common": "^12.2.9",
+    "@angular/compiler": "^12.2.9",
+    "@angular/core": "^12.2.9",
     "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "12.2.9",
+    "@angular/forms": "^12.2.9",
     "@angular/material": "^12.2.9",
-    "@angular/platform-browser": "12.2.9",
-    "@angular/platform-browser-dynamic": "12.2.9",
-    "@angular/router": "12.2.9",
-    "@angular/upgrade": "12.2.9",
+    "@angular/platform-browser": "^12.2.9",
+    "@angular/platform-browser-dynamic": "^12.2.9",
+    "@angular/router": "^12.2.9",
+    "@angular/upgrade": "^12.2.9",
     "@asymmetrik/ngx-leaflet": "6.0.1",
     "@auth0/angular-jwt": "^5.0.2",
-    "@ctrl/ngx-codemirror": "3.1.3",
-    "@danielmoncada/angular-datetime-picker": "10.0.0",
+    "@ctrl/ngx-codemirror": "5.1.1",
+    "@danielmoncada/angular-datetime-picker": "13.0.0",
     "@fortawesome/fontawesome-free": "5.12.1",
-    "@ngx-loading-bar/core": "5.1.0",
-    "@ngx-loading-bar/http-client": "5.1.0",
+    "@ngx-loading-bar/core": "5.1.2",
+    "@ngx-loading-bar/http-client": "5.1.2",
     "@panzoom/panzoom": "^4.3.2",
     "@stomp/ng2-stompjs": "7.2.0",
     "@swimlane/ngx-charts": "16.0.0",
-    "angular-datatables": "^10.0.0",
-    "angular-gridster2": "8.3.0",
+    "angular-datatables": "^12.0.2",
+    "angular-gridster2": "12.1.1",
     "angular-loading-bar": "0.8.0",
     "angular-material-icons": "0.4.0",
     "angular-plotly.js": "^4.0.0",
@@ -52,7 +52,8 @@
     "angular2-uuid": "1.1.1",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
-    "codemirror": "5.55.0",
+    "console-browserify": "^1.2.0",
+    "codemirror": "^5.55.0",
     "core-js": "2.5.3",
     "dagre": "0.8.4",
     "datatables.net": "1.10.20",
@@ -71,15 +72,13 @@
     "lodash": "4.17.20",
     "material-icons": "^0.5.3",
     "ng-file-upload": "9.0.13",
-    "ng-pick-datetime": "7.0.0",
     "ng-prettyjson": "0.1.8",
     "ng-simple-slideshow": "1.2.9",
     "ng2-dragula": "1.5.0",
-    "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
-    "ngx-echarts": "^6.0.0",
-    "ngx-quill": "12.0.1",
-    "ngx-showdown": "5.1.0",
+    "ngx-echarts": "^7.1.0",
+    "ngx-quill": "15.0.0",
+    "ngx-showdown": "6.0.0",
     "path": "^0.12.7",
     "plotly.js": "^2.3.1",
     "prismjs": "1.16.0",
@@ -96,8 +95,8 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^12.1.3",
     "@angular-devkit/build-angular": "^12.2.9",
-    "@angular/cli": "12.2.9",
-    "@angular/compiler-cli": "12.2.9",
+    "@angular/cli": "^12.2.9",
+    "@angular/compiler-cli": "^12.2.9",
     "@ngtools/webpack": "^12.2.9",
     "@types/angular": "^1.7.4",
     "@types/jasmine": "~3.6.0",
@@ -115,10 +114,9 @@
     "csv-string": "4.0.1",
     "cypress": "^9.1.1",
     "cypress-file-upload": "^5.0.8",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "~3.6.0",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jasmine-core": "^3.6.0",
     "js-yaml": "^3.14.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
@@ -127,18 +125,17 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-verbose-reporter": "0.0.6",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "mustache": "^2.3.0",
     "prettier": "1.14.2",
     "raw-loader": "^0.5.1",
     "resize-observer-polyfill": "^1.5.1",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^12.4.0",
     "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "4.3.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
