Updated a few more

--- a/ui/package.json
+++ b/ui/package.json
@@ -47,14 +47,14 @@
     "angular-loading-bar": "0.8.0",
     "angular-material-icons": "0.4.0",
     "angular-plotly.js": "^4.0.0",
-    "angular-tree-component": "8.5.6",
+    "@circlon/angular-tree-component": "11.0.4",
     "angular-ui-tree": "2.9.0",
     "angular2-uuid": "1.1.1",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
     "console-browserify": "^1.2.0",
     "codemirror": "^5.55.0",
-    "core-js": "2.5.3",
+    "core-js": "3.20.1",
     "dagre": "0.8.4",
     "datatables.net": "1.10.20",
     "datatables.net-dt": "1.10.21",
