--- a/ui/package.json
+++ b/ui/package.json
@@ -39,7 +39,12 @@
     "@fortawesome/fontawesome-free": "5.12.1",
     "@ngx-loading-bar/core": "5.1.2",
     "@ngx-loading-bar/http-client": "5.1.2",
-    "@panzoom/panzoom": "^4.3.2",
+    "@jsplumb/core": "^5.3.1",
+    "@jsplumb/browser-ui": "^5.3.1",
+    "@jsplumb/connector-bezier": "^5.3.1",
+    "@jsplumb/util": "^5.3.1",
+    "@jsplumb/common": "^5.3.1",
+    "@panzoom/panzoom": "^4.4.3",
     "@stomp/ng2-stompjs": "7.2.0",
     "@swimlane/ngx-charts": "16.0.0",
     "angular-datatables": "^12.0.2",
@@ -65,7 +70,6 @@
     "jquery": "2.1.3",
     "jquery-ui-dist": "1.12.1",
     "jshint": "^2.13.1",
-    "jsplumb": "^2.15.5",
     "jszip": "3.2.1",
     "konva": "3.2.4",
     "leaflet": "1.6.0",
