Add streampipes platform services to npm build scripts

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,14 +8,14 @@
     "url": "https://github.com/apache/incubator-streampipes"
   },
   "scripts": {
-    "start": "node ./deployment/prebuild.js && ng build @streampipes/platform-services && ng serve",
-    "test": "node ./deployment/prebuild.js && ng test",
+    "start": "node ./deployment/prebuild.js && ng build @streampipes/platform-services && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng serve",
+    "test": "node ./deployment/prebuild.js && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng test",
     "start-plain": "ng serve",
-    "build-plain": "set NODE_OPTIONS=--max-old-space-size=10192 && ng build --configuration production",
+    "build-plain": "set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build --configuration production",
     "run-prebuild-script": "node ./deployment/prebuild.js",
-    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --configuration production",
-    "build-dev": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && ng build",
-    "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --configuration production",
+    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build --configuration production",
+    "build-dev": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build",
+    "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build --configuration production",
     "lint": "tslint -c tslint.json 'src/**/*.ts*",
     "analyze": "webpack-bundle-analyzer dist/stats.json",
     "test-cypress-open": "cypress open",
@@ -41,16 +41,15 @@
     "@ctrl/ngx-codemirror": "5.1.1",
     "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@fortawesome/fontawesome-free": "5.12.1",
-    "@jsplumb/core": "^5.3.1",
     "@jsplumb/browser-ui": "^5.3.1",
-    "@jsplumb/connector-bezier": "^5.3.1",
-    "@jsplumb/util": "^5.3.1",
     "@jsplumb/common": "^5.3.1",
+    "@jsplumb/connector-bezier": "^5.3.1",
+    "@jsplumb/core": "^5.3.1",
+    "@jsplumb/util": "^5.3.1",
     "@ngx-loading-bar/core": "5.1.2",
     "@ngx-loading-bar/http-client": "5.1.2",
     "@panzoom/panzoom": "^4.4.3",
     "@stomp/ng2-stompjs": "7.2.0",
-    "@streampipes/platform-services": "file:./dist/streampipes/platform-services",
     "@swimlane/ngx-charts": "16.0.0",
     "angular-datatables": "^12.0.2",
     "angular-gridster2": "12.1.1",
@@ -87,7 +86,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^12.1.3",
-    "@angular-devkit/build-angular": "^12.2.9",
+    "@angular-devkit/build-angular": "^12.2.15",
     "@angular/cli": "^12.2.9",
     "@angular/compiler-cli": "^12.2.9",
     "@ngtools/webpack": "^12.2.9",
