[hotfix] Improve build script

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,14 +8,15 @@
     "url": "https://github.com/apache/incubator-streampipes"
   },
   "scripts": {
-    "start": "node ./deployment/prebuild.js && ng build @streampipes/platform-services && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng serve",
-    "test": "node ./deployment/prebuild.js && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng test",
+    "build-platform-services": "ng build @streampipes/platform-services && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services",
+    "start": "node ./deployment/prebuild.js && npm run build-platform-services && ng serve",
+    "test": "node ./deployment/prebuild.js && npm run build-platform-services && ng test",
     "start-plain": "ng serve",
-    "build-plain": "set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build --configuration production",
+    "build-plain": "set NODE_OPTIONS=--max-old-space-size=10192 && npm run build-platform-services && ng build --configuration production",
     "run-prebuild-script": "node ./deployment/prebuild.js",
-    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build --configuration production",
-    "build-dev": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build",
-    "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && npm install @streampipes/platform-services@file:./dist/streampipes/platform-services && ng build --configuration production",
+    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && npm run build-platform-services && ng build --configuration production",
+    "build-dev": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && npm run build-platform-services && ng build",
+    "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && npm run build-platform-services && ng build --configuration production",
     "lint": "tslint -c tslint.json 'src/**/*.ts*",
     "analyze": "webpack-bundle-analyzer dist/stats.json",
     "test-cypress-open": "cypress open",
