--- a/streampipes-extensions/streampipes-pipeline-elements-data-simulator/pom.xml
+++ b/streampipes-extensions/streampipes-pipeline-elements-data-simulator/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.69.0-SNAPSHOT</version>
+        <version>0.69.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -76,4 +76,8 @@
         </dependency>
     </dependencies>
 
+
+  <scm>
+    <tag>release/0.69.0</tag>
+  </scm>
 </project>
