--- a/streampipes-extensions/streampipes-processors-filters-siddhi/pom.xml
+++ b/streampipes-extensions/streampipes-processors-filters-siddhi/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.69.0-SNAPSHOT</version>
+        <version>0.69.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -46,12 +46,12 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sdk-bundle</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-wrapper-siddhi</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-test-utils</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -119,4 +119,8 @@
     </build>
 
 
+
+  <scm>
+    <tag>release/0.69.0</tag>
+  </scm>
 </project>
