--- a/streampipes-extensions/streampipes-processors-geo-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-processors-geo-jvm/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.69.0-SNAPSHOT</version>
+        <version>0.69.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -36,17 +36,17 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-config</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sdk-bundle</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-wrapper-standalone</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
 
         <!-- External dependencies -->
@@ -103,4 +103,8 @@
 
     </build>
 
+
+  <scm>
+    <tag>release/0.69.0</tag>
+  </scm>
 </project>
