--- a/streampipes-extensions/streampipes-processors-text-mining-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-processors-text-mining-jvm/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.69.0-SNAPSHOT</version>
+        <version>0.69.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -36,12 +36,12 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sdk-bundle</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-wrapper-standalone</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
 
         <!-- External dependencies -->
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-messaging-mqtt</artifactId>
-            <version>0.69.0-SNAPSHOT</version>
+            <version>0.69.0</version>
         </dependency>
     </dependencies>
 
@@ -87,4 +87,8 @@
         </plugins>
         <finalName>streampipes-processors-text-mining-jvm</finalName>
     </build>
+
+  <scm>
+    <tag>release/0.69.0</tag>
+  </scm>
 </project>
