[STREAMPIPES-517] Bump Angular to v13

--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -60,6 +60,7 @@ projects/streampipes/platform-services/node_modules
 !.vscode/extensions.json
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
