--- a/ui/package.json
+++ b/ui/package.json
@@ -25,20 +25,20 @@
   },
   "dependencies": {
     "@angular-architects/module-federation": "^14.0.1",
-    "@angular/animations": "^12.2.9",
-    "@angular/cdk": "^12.2.9",
-    "@angular/common": "^12.2.9",
-    "@angular/compiler": "^12.2.9",
-    "@angular/core": "^12.2.9",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "^12.2.9",
-    "@angular/material": "^12.2.9",
-    "@angular/platform-browser": "^12.2.9",
-    "@angular/platform-browser-dynamic": "^12.2.9",
-    "@angular/router": "^12.2.9",
+    "@angular/animations": "^13.3.0",
+    "@angular/cdk": "^13.3.0",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
+    "@angular/forms": "^13.3.0",
+    "@angular/material": "^13.3.0",
+    "@angular/platform-browser": "^13.3.0",
+    "@angular/platform-browser-dynamic": "^13.3.0",
+    "@angular/router": "^13.3.0",
     "@asymmetrik/ngx-leaflet": "6.0.1",
     "@auth0/angular-jwt": "^5.0.2",
-    "@circlon/angular-tree-component": "11.0.4",
+    "@circlon/angular-tree-component": "^11.0.4",
     "@ctrl/ngx-codemirror": "5.1.1",
     "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@fortawesome/fontawesome-free": "5.12.1",
@@ -51,8 +51,8 @@
     "@ngx-loading-bar/http-client": "5.1.2",
     "@panzoom/panzoom": "^4.4.3",
     "@swimlane/ngx-charts": "16.0.0",
-    "angular-datatables": "^12.0.2",
-    "angular-gridster2": "12.1.1",
+    "angular-datatables": "^13.0.1",
+    "angular-gridster2": "^13.1.1",
     "angular-plotly.js": "^4.0.0",
     "angular2-uuid": "1.1.1",
     "codemirror": "^5.55.0",
@@ -80,17 +80,18 @@
     "rxjs": "6.6.2",
     "shepherd.js": "^9.0.0",
     "showdown": "1.9.1",
-		"stream-browserify": "3.0.0",
+    "stream-browserify": "3.0.0",
     "swagger-ui": "^4.2.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^12.1.3",
-    "@angular-devkit/build-angular": "^12.2.15",
-    "@angular/cli": "^12.2.9",
-    "@angular/compiler-cli": "^12.2.9",
-    "@ngtools/webpack": "^12.2.9",
+    "@angular-builders/custom-webpack": "^13.1.0",
+    "@angular-devkit/build-angular": "^13.3.0",
+    "@angular/cli": "^13.3.0",
+    "@angular/compiler-cli": "^13.3.0",
+    "@cypress/webpack-batteries-included-preprocessor": "^2.2.3",
+    "@ngtools/webpack": "^13.3.0",
     "@types/angular": "^1.7.4",
     "@types/jasmine": "~3.6.0",
     "@types/jqueryui": "^1.12.13",
@@ -103,8 +104,8 @@
     "codelyzer": "^6.0.0",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^5.1.2",
-    "csv-string": "4.0.1",
-    "cypress": "^9.1.1",
+    "csv-string": "^4.1.0",
+    "cypress": "^9.5.2",
     "cypress-file-upload": "^5.0.8",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
@@ -118,7 +119,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-verbose-reporter": "0.0.6",
     "mustache": "^2.3.0",
-    "ng-packagr": "^12.1.1",
+    "ng-packagr": "^13.3.0",
     "path": "^0.12.7",
     "prettier": "1.14.2",
     "raw-loader": "^4.0.2",
@@ -128,10 +129,9 @@
     "to-string-loader": "^1.1.5",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "4.3.5",
+    "typescript": "4.6.2",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
   }
 }
