--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        distribution: 'temurin'
+          java-version: '11'
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
