[hotfix] Acitvate GitHub Actions build status notification in the asf.yml

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -23,6 +23,8 @@ github:
     - analytics
     - stream-processing
     - self-service
+  notifications:
+    jobs: issues@streampipes.apache.org
   features:
     wiki: false
     issues: false
